# django-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_snippet_highlighted_snippet_owner.py
cms/: models.py  urls.py
cms/migrations/: 0001_initial.py  0002_rename_intro_homepage_body_homepage_hero_cta_and_more.py  0003_navigationsettings.py  0004_footertext.py  0005_footerconfig.py  0006_alter_footertext_unique_together_and_more.py  0007_navigationsettings_custom_text.py  0008_homepage_hide_footer.py  0009_footersnippet_standardpage.py  0010_standardpage_footer_snippet.py  0011_formpage_formfield.py
cms/templates/: base.html
cms/templates/cms/: form_page.html  home_page.html  standard_page.html
cms/templates/includes/: footer.html  header.html
cms/templatetags/: navigation_tags.py
cms_portfolio/: blocks.py  models.py
cms_portfolio/migrations/: 0001_initial.py  0002_alter_portfoliopage_body.py
core/: settings.py  urls.py
home/: models.py  tests.py
home/migrations/: 0001_initial.py
myproject/: settings.py  urls.py
static/: .gitkeep
static/css/: main.css
templates/: base.html
templates/home/: blog_index_page.html  blog_page.html  home_page.html
