[project]
name = "django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael",email = "michael@octave.nz"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=5.2.8,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
